fix homepage spacing

--- a/static/css/static.css
+++ b/static/css/static.css
@@ -268,6 +268,7 @@ button {
     display: grid;
     place-items: center;
     max-width: fit-content;
+    padding-right: 45px;
     /* border-radius: 7px; */
     /* width: 100px;
     height: 100px; */
